<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navAverage"
        android:icon="@drawable/calculate"
        android:title="@string/navStat" />
    <item
        android:id="@+id/navExport"
        android:icon="@drawable/json_export"
        android:title="@string/navExport" />
    <item
        android:id="@+id/navImport"
        android:icon="@drawable/json_import"
        android:title="@string/navImport" />
    <item
        android:id="@+id/navSend"
        android:icon="@drawable/json_send"
        android:title="@string/navSend" />
    <item
        android:id="@+id/navArNumerals"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/arabic_numerals"
        android:title="@string/navArNumerals" />
    <item
        android:id="@+id/navHelp"
        android:icon="@drawable/help"
        android:title="@string/navHelp" />
</menu>