<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/googleDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_rect"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/backupTextsPadH"
        android:paddingVertical="8sp"
        android:text="@string/syncGoogleDrive"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/google_drive" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/backupTextsPadH"
        android:paddingVertical="10sp"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/backup"
            style="@style/backupAction"
            android:text="@string/backup" />

        <TextView
            android:id="@+id/restore"
            style="@style/backupAction"
            android:background="@drawable/button_rect"
            android:text="@string/restore" />

        <TextView
            android:id="@+id/export"
            style="@style/backupAction"
            android:text="@string/export" />
    </LinearLayout>
</LinearLayout>